<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical"
    android:padding="8dp"
    android:gravity="center"
    tools:context=".LoginStudentActivity">

    <ProgressBar
        android:id="@+id/login_student_progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/email_login_form_student"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/login_email_student"
            android:hint="@string/email_hint"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/login_password_student"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:maxLines="1"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/login_student_button"
            android:text="@string/login_text"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="20dp"
            android:layout_width="70dp"
            android:layout_height="30dp"/>

        <TextView
            android:id="@+id/or_textView"
            android:text="@string/or_text"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/create_acc_button_login_student"
            android:text="@string/create_acc_text"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:background="@android:color/darker_gray"
            android:layout_width="165dp"
            android:layout_height="30dp"/>

    </LinearLayout>

</LinearLayout>