<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="8dp"
    tools:context=".CreateAccountFacultyActivity">

    <ProgressBar
        android:id="@+id/create_faculty_progressBar"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/create_faculty_email"
            android:hint="@string/email_hint"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/create_faculty_password"
            android:hint="@string/password_hint"
            android:maxLines="1"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/create_faculty_no"
            android:hint="@string/employee_no_hint"
            android:maxLines="1"
            android:inputType="number"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/create_faculty_name"
            android:hint="@string/name_hint"
            android:maxLines="1"
            android:autofillHints="username"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/create_faculty_department"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:text="@string/department_text"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/create_faculty_spinner"
                android:layout_width="150dp"
                android:layout_height="38dp"
                android:layout_toRightOf="@+id/create_faculty_department" />

        </LinearLayout>


        <Button
            android:id="@+id/create_account_faculty"
            android:text="@string/create_acc_text"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="30dp"
            android:layout_width="165dp"
            android:layout_height="30dp"/>

    </LinearLayout>

</LinearLayout>