<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical"
    android:padding="8dp"
    android:gravity="center"
    tools:context=".AddSlotActivity">

    <ProgressBar
        android:id="@+id/add_slot_progressBar"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/timeFormat_textView"
            android:text="@string/timeFormat_text"
            android:layout_marginStart="40dp"
            android:textSize="15sp"
            android:textStyle="italic"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginStart="30dp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/add_slot_subjectTextView"
                android:text="@string/subject_text"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/add_slot_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="1dp"
            android:layout_marginStart="30dp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/add_slot_sTimeTextView"
                android:text="@string/startingTime_text"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/add_slot_sTime"
                android:inputType="time"
                android:layout_width="110dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="1dp"
            android:layout_marginStart="30dp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/add_slot_eTimeTextView"
                android:text="@string/endTime_text"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/add_slot_eTime"
                android:inputType="time"
                android:layout_width="120dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <Button
            android:id="@+id/add_slot_saveButton"
            android:text="@string/save_text"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="30dp"
            android:layout_width="70dp"
            android:layout_height="30dp"/>

    </LinearLayout>

</LinearLayout>